--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,10 +22,10 @@ jobs:
         go-version: 1.21
 
     - name: Build
-      run: go build -v -o bookget_a .
+      run: go build -v -o bookget.exe .
 
     - uses: actions/upload-artifact@v3
       with:
         name: actions-exe-file
-        path: bookget_a.exe
+        path: bookget.exe
 
