--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,8 @@ jobs:
         go-version: 1.21
 
     - name: Build
-      run: go build -v -o bookget.exe .
+      run: GOOS=windows GOARCH=amd64 go build -o bookget.exe .
+
 
     - uses: actions/upload-artifact@v3
       with:
