--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,5 +28,8 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: actions-exe-file
-        path: bookget.exe
+        path:
+          bookget.exe
+          dezoomify-rs.exe
+          config.ini
 
