config.ini增加超时（秒）的配置，下载图片统一放到Download文件夹（可配置）。

--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,7 @@ app_mode = 0
 
 [paths]
 # 下载文件存放目录，空值是当前目录
-data = ""
+data = "---Download---"
 
 [download]
 # 指定文件扩展名[.jpg|.tif|.png|.pdf]等
@@ -14,6 +14,9 @@ ext = ".jpg"
 
 # 最大并发连接数，0=自动识别CPU核数*2
 threads = 6
+
+# 超时（秒）
+timeout = 3000
 
 # 下载限速 N 秒/任务，cuhk推荐5-60
 speed = 0
